# task_manager

./: .gitignore  README.md
backend/: TODO  pyproject.toml
backend/backend/: main.py
backend/backend/dao/: interfaces.py  mysql.py  mysql_dao.py
backend/backend/services/: converters.py  graphql.py  schemas.py
docker/: backend.Dockerfile  backend_entrypoint.sh  docker-compose.yml
frontend/: TODO  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: NewTodo.vue  ToasterBS.vue  TodoList.vue  TodoOptions.vue
frontend/src/icons/: IconPlus.vue  IconTrash.vue
frontend/src/lib/: config.ts  converters.ts  queries.ts  types.ts
frontend/src/routes/: +page.svelte
